Refactored to split Builder and Viewer UIs, fixed thumbnail scrolling arrows

--- a/vimeo-playlist-server/public/index.html
+++ b/vimeo-playlist-server/public/index.html
@@ -97,6 +97,9 @@
   </div>
 
   <!-- Main JavaScript -->
-  <script src="main.js"></script>
+
+<script src="/responsive.js"></script>
+<script src="/builder.js"></script>
+
 </body>
 </html>
